# gnome-streaming-player

./: README.md  meson.build  org.gnome.Gnome-Streaming-Player.json
data/: meson.build  org.gnome.Gnome-Streaming-Player.appdata.xml.in  org.gnome.Gnome-Streaming-Player.desktop.in  org.gnome.Gnome-Streaming-Player.gschema.xml  stream-source.json
po/: POTFILES  meson.build
src/: gnome-streaming-player.gresource.xml  gnome-streaming-player.in  main.py  meson.build  window.py  window.ui
